Don't record delay timer when ApproximateReceiveCount > 1 and update README
Signed-off-by: Jeremy Michael <jsusanto@amazon.com>